# python-requirements-inspector

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  release-please-config.json  renovate.json  sonar-project.properties  tox.ini
.github/workflows/: ci.yml  poetry-build.yml  pr.yml
docs/: SPACY_UPDATE_GUIDE.md
python_requirements_inspector/: constants.py  lang_detector.py  main.py  text_analyzer.py  text_processor.py  type_definitions.py  workitem_analyzer.py
python_requirements_inspector/checkers/: comparative_checker.py  complex_checker.py  passive_checker.py  process_word_checker.py  weak_word_checker.py
tests/: test_constants.py  test_lang_detector.py  test_main.py  test_text_analyzer.py  test_workitem_analyzer.py
