[project]
name = "python-requirements-inspector"
version = "4.1.0"
description = ""
authors = [
    { name = "SBB Polarion Team", email = "polarion-opensource@sbb.ch" },
]
license = { text = "Apache-2.0" }
readme = "README.md"
homepage = "https://github.com/SchweizerischeBundesbahnen/python-requirements-inspector"
repository = "https://github.com/SchweizerischeBundesbahnen/python-requirements-inspector"
requires-python = ">=3.13,<3.14"

[project.scripts]
inspect-requirements = "python_requirements_inspector.main:run"

[tool.poetry]
requires-poetry = ">=2.0"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
spacy = "3.8.7"
spacy-language-detection = "0.2.1"
de-core-news-md = { url = "https://github.com/explosion/spacy-models/releases/download/de_core_news_md-3.8.0/de_core_news_md-3.8.0-py3-none-any.whl" }
en-core-web-md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl" }

[tool.poetry.group.dev.dependencies]
pre-commit = "4.3.0"
ruff = "0.12.9"
mypy = "1.17.1"

[tool.poetry.group.test.dependencies]
tox = "4.28.4"
pytest = "8.4.1"
coverage = "7.10.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 240
fix = true
show-fixes = true

[tool.ruff.lint]
extend-select = [
    # --- Recommended ---
    "E", "W", # pycodestyle errors and warnings
    "F",      # Pyflakes
    "I",      # isort
    "C4",     # flake8-comprehensions
    "C90",    # mccabe
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "S",      # flake8-bandit
    "PL",     # Pylint
    "PTH",    # flake8-pathlib
    "TCH",    # type-checking imports
    "SIM",    # flake8-simplify
    "T20",    # flake8-print
    "ERA",    # eradicate
]

[tool.ruff.lint.per-file-ignores]
"python_requirements_inspector/main.py" = [
    "T201" # No prints
]
"tests/*" = [
    "S101" # No assert rule (bandit)
]

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
explicit_package_bases = true
disallow_untyped_defs = true
exclude = "tests/.*"
