[project]
name = "python-requirements-inspector"
version = "4.1.0"
description = ""
authors = [
    { name = "SBB Polarion Team", email = "polarion-opensource@sbb.ch" },
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "spacy==3.8.11",
    "spacy-language-detection==0.2.1",
    "de-core-news-md @ https://github.com/explosion/spacy-models/releases/download/de_core_news_md-3.8.0/de_core_news_md-3.8.0-py3-none-any.whl",
    "en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl",
    # pinning version to avoid security issues
    "urllib3==2.6.3",
]

[project.scripts]
inspect-requirements = "python_requirements_inspector.main:run"

[project.urls]
Homepage = "https://github.com/SchweizerischeBundesbahnen/python-requirements-inspector"
Repository = "https://github.com/SchweizerischeBundesbahnen/python-requirements-inspector"

[dependency-groups]
dev = [
    "pre-commit==4.5.1",
    "ruff==0.14.11",
    "mypy==1.19.1",
]

test = [
    "tox==4.33.0",
    "pytest==9.0.2",
    "coverage==7.13.4",
]

[tool.uv]
# Set to true because this project is a library, not an application
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 240
fix = true
show-fixes = true

[tool.ruff.lint]
extend-select = [
    # --- Recommended ---
    "E", "W", # pycodestyle errors and warnings
    "F",      # Pyflakes
    "I",      # isort
    "C4",     # flake8-comprehensions
    "C90",    # mccabe
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "S",      # flake8-bandit
    "PL",     # Pylint
    "PTH",    # flake8-pathlib
    "TCH",    # type-checking imports
    "SIM",    # flake8-simplify
    "T20",    # flake8-print
    "ERA",    # eradicate
]

[tool.ruff.lint.per-file-ignores]
"python_requirements_inspector/main.py" = [
    "T201" # No prints
]
"tests/*" = [
    "S101" # No assert rule (bandit)
]

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
explicit_package_bases = true
disallow_untyped_defs = true
exclude = "tests/.*"
install_types = true
non_interactive = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
